# cmake-samples

./: README.md
01_find_hip/: CMakeLists.txt
rocm/01_find_hip/: CMakeLists.txt
rocm/02_find_hip_lib_targets/: CMakeLists.txt
